# laba5c

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt  string_.c  string_.h
libs/tasks/: task1.h  task2.h  task3.h  task4.h  task6.h
